# CBattle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
CBattle/github/: installer.py
CBattle/package/: __init__.py  base.py  cog.py  commands.py  components.py  config.py  config.toml  logic.py  pagination.py  paginaton.py
CBattle/package/customs/: abilities.py  base.py  effects.py
battle/github/: installer.py
battle/package/: __init__.py
